[package]
name = "txtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
text-splitter = { version = "0.5.0", features = ["tokenizers"] }
tokenizers = { version = "0.15.0", features = ["http"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
